--- a/templates/store/index.html
+++ b/templates/store/index.html
@@ -1,10 +1,9 @@
-{% extends "./base.html" %}
-{% load static %}
-{% block title %}BookStore{% endblock %}
+{% extends "base.html" %}
+{% block title %}Store - Low Prices in Books & more{% endblock %}
 {% block content %}
-<main>
+
   <div class="container">
-    <div class="alert alert-primary fw600 rounded-0 border-0 py-3" role="alert">
+    <div class="alert alert-primary fw600 rounded-0 border-0 pb-3" role="alert">
       <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-info-circle me-2"
         viewBox="0 0 16 16">
         <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
@@ -20,6 +19,9 @@
           <div class="pb-3">
             <h1 class="h3">Popular</h1>
           </div>
+          {% if not products %}  
+          <div class="col-12">There are currently no products active</div>
+            {% else %}
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-5 g-3">
             {% for product in products %}
             <div class="col">
@@ -36,8 +38,9 @@
             </div>
             {% endfor %}
           </div>
+          {% endif %}
         </div>
       </div>
     </div>
-</main>
+
 {% endblock %}
