--- a/templates/store/index.html
+++ b/templates/store/index.html
@@ -26,13 +26,21 @@
             {% for product in products %}
             <div class="col">
               <div class="card border-0">
-                <img class="img-fluid" alt="Responsive image" src="{{ product.image.url }}">
-                <div class="card-body px-0">
+
+                {% for image in product.product_image.all %}
+                {% if image.is_feature %} 
+                <a href="{{ product.get_absolute_url }}">
+                <img  class="img-fluid" alt="Responsive image"  src="{{ image.image.url }}"
+                alt="{{ image.image.alt_text }}"> 
+                </a>
+                {% endif %}
+                {% endfor %}
+                  <div class="card-body px-0">
                   <p class="card-text">
                     <a class="text-dark text-decoration-none"
                       href="{{ product.get_absolute_url }}">{{ product.title|slice:":50" }}...</a>
                   </p>
-                  <div class="fw-bold">£{{product.price}}</div>
+                  <div class="fw-bold">£{{product.regular_price}}</div>
                 </div>
               </div>
             </div>
