--- a/templates/account/sub_base.html
+++ b/templates/account/sub_base.html
@@ -1,11 +1,11 @@
-{% extends "base.html" %}
+{% extends "../base.html" %}
 {% load static %}
 {% block stylesheet %}{% static 'account/css/account.css' %}{% endblock %}
 
 {% block content %}
-<div class="container-fluid">
+<div class="container">
   <div class="login d-flex align-items-center">
-    <div class=" mx-auto">
+    <div class="col-12 col-md-12 col-lg-12 mx-auto">
       {% block sub_content %}{% endblock %}
     </div>
   </div>
